[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Alex Black <wa7@sa34.cx>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/wa7sa34cx/grrs"
repository = "https://github.com/wa7sa34cx/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "grrs"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
indicatif = "0.16"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"